--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,7 @@ add_executable(cotest
 )
 
 set_property(TARGET cotest PROPERTY CXX_STANDARD 20)
-target_compile_options(cotest PRIVATE "-fcoroutines-ts")
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(cotest PRIVATE "-fcoroutines-ts")
+endif()
