--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(sco CXX)
 
 include(GNUInstallDirs)
 
+# global
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose Release or Debug" FORCE)
 endif()
@@ -13,6 +14,7 @@ if(NOT CMAKE_CXX_STANDARD)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif()
 
+# current repo check
 if(NOT DEFINED SCO_MASTER_PROJECT)
     if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
         set(SCO_MASTER_PROJECT ON)
@@ -21,12 +23,15 @@ if(NOT DEFINED SCO_MASTER_PROJECT)
     endif()
 endif()
 
+# options
 option(SCO_BUILD_SHARED "Build shared library" OFF)
 option(SCO_BUILD_EXAMPLE "Build example" ${SCO_MASTER_PROJECT})
 
+# source code
 file(GLOB SCO_ALL_HEADERS "include/*.h" "include/*.hpp")
 SET(SCO_SRCS "src/sco.cpp")
 
+# library
 if(SCO_BUILD_SHARED OR BUILD_SHARED_LIBS)
     add_library(sco SHARED ${SCO_SRCS} ${SCO_ALL_HEADERS})
     target_compile_definitions(sco PUBLIC SCO_SHARED_LIB)
@@ -40,12 +45,13 @@ target_compile_definitions(sco PUBLIC SCO_COMPILED_LIB)
 target_include_directories(sco PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"
                                       "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
+# header only
 add_library(sco_header_only INTERFACE)
 add_library(sco::sco_header_only ALIAS sco_header_only)
 
 target_include_directories(sco_header_only INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"
                                                      "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
-
+# compile
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_compile_options(sco PUBLIC "-fcoroutines-ts")
     target_compile_options(sco_header_only INTERFACE "-fcoroutines-ts")
@@ -54,6 +60,7 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(sco_header_only INTERFACE "-fcoroutines")
 endif()
 
+# example
 if (SCO_BUILD_EXAMPLE)
     add_subdirectory(example)
 endif()
