--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,3 +5,7 @@ add_executable(example example.cpp)
 
 find_package(Threads)
 target_link_libraries(example PRIVATE sco::sco ${CMAKE_THREAD_LIBS_INIT})
+
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.14 AND SCO_BUILD_EXAMPLE_HTTPCACHE)
+    add_subdirectory(httpcache)
+endif()
